Committing everything before we go back

--- a/Packages/com.mmmaellon.big-deck-is-back-in-town/Runtime/com.mmmaellon.big-deck-is-back-in-town.asmdef
+++ b/Packages/com.mmmaellon.big-deck-is-back-in-town/Runtime/com.mmmaellon.big-deck-is-back-in-town.asmdef
@@ -10,7 +10,7 @@
         "Unity.TextMeshPro",
         "si.iwa.udontask",
         "VRC.Udon.Serialization.OdinSerializer",
-        "com.mmmaellon.smartobjectsync"
+        "com.mmmaellon.lightsync"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
