--- a/Packages/com.mmmaellon.big-deck-is-back-in-town/package.json
+++ b/Packages/com.mmmaellon.big-deck-is-back-in-town/package.json
@@ -1,7 +1,7 @@
 {
   "name": "com.mmmaellon.big-deck-is-back-in-town",
   "displayName": "Big Deck Is Back In Town",
-  "version": "4.2.2",
+  "version": "6.0.0-beta",
   "unity": "2019.1",
   "url": "https://github.com/MMMaellon/BigDeckIsBackInTown.git",
   "gitDependencies": {},
