Got dealing cards working

--- a/Packages/com.mmmaellon.big-deck-is-back-in-town/Runtime/com.mmmaellon.big-deck-is-back-in-town.asmdef
+++ b/Packages/com.mmmaellon.big-deck-is-back-in-town/Runtime/com.mmmaellon.big-deck-is-back-in-town.asmdef
@@ -8,9 +8,10 @@
         "UdonSharp.Runtime",
         "UdonSharp.Editor",
         "Unity.TextMeshPro",
-        "si.iwa.udontask",
         "VRC.Udon.Serialization.OdinSerializer",
-        "com.mmmaellon.smartobjectsync"
+        "com.mmmaellon.smartobjectsync",
+        "com.mmmaellon.lightsync",
+        "com.mmmaellon.group-theory"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
